--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/Faez-B/Exos-preparation-Node#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16"
   }
 }
